--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "google-adk>=1.9.0",
     "pydantic>=2.11.7",
+    "boto3>=1.35.0",
+    "requests>=2.32.0",
 ]
